--- a/SoundOverlow/Base.lproj/Main.storyboard
+++ b/SoundOverlow/Base.lproj/Main.storyboard
@@ -18,16 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6SF-e3-8xt">
-                                <rect key="frame" x="0.0" y="20" width="375" height="526"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6SF-e3-8xt">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6SF-e3-8xt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FWO-5i-qQ8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6SF-e3-8xt" secondAttribute="bottom" constant="121" id="l1C-II-IRp"/>
-                            <constraint firstItem="6SF-e3-8xt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="23" id="pUg-sW-jOe"/>
-                            <constraint firstItem="6SF-e3-8xt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sjJ-fq-6Ur"/>
+                            <constraint firstItem="6SF-e3-8xt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FkH-wu-fY0"/>
+                            <constraint firstItem="6SF-e3-8xt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Nen-c4-E7F"/>
+                            <constraint firstItem="6SF-e3-8xt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="W9U-Zl-g2p"/>
+                            <constraint firstItem="6SF-e3-8xt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fes-WR-dTU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
