--- a/SoundOverlow/Base.lproj/LaunchScreen.storyboard
+++ b/SoundOverlow/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="powered-by-songkick-pink.png" translatesAutoresizingMaskIntoConstraints="NO" id="LJr-lX-sgJ">
                                 <rect key="frame" x="43" y="238" width="302" height="150"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsM-l7-dot">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsM-l7-dot">
                                 <rect key="frame" x="43" y="588" width="284" height="11"/>
                                 <attributedString key="attributedText">
                                     <fragment content="© Tanja Stroble">
@@ -38,10 +38,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="SsM-l7-dot" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="2zc-2Q-8JZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LJr-lX-sgJ" secondAttribute="trailing" constant="30" id="7wP-ol-dEQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="SsM-l7-dot" secondAttribute="bottom" constant="68" id="DmI-p9-4xd"/>
                             <constraint firstItem="LJr-lX-sgJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="Jvc-36-f6S"/>
                             <constraint firstItem="LJr-lX-sgJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="218" id="Pyw-4H-qeb"/>
+                            <constraint firstItem="SsM-l7-dot" firstAttribute="top" secondItem="LJr-lX-sgJ" secondAttribute="bottom" constant="200" id="Yij-Ha-VWw"/>
                             <constraint firstItem="SsM-l7-dot" firstAttribute="top" secondItem="LJr-lX-sgJ" secondAttribute="bottom" constant="200" id="tQ3-Go-eDh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SsM-l7-dot" secondAttribute="trailing" constant="48" id="xTM-09-ov0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
